# zug

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  README.rst  WORKSPACE
bazel/: defs.bzl  deps.bzl
example/bazel/: BUILD.bazel  WORKSPACE  zug_test.cc
include/: zug
test/: BUILD.bazel  reduce.cpp
test/__inline_var_tests/: BUILD.bazel  inline_var.cpp
test/__inline_var_tests/resources/: BUILD.bazel
test/transducer/: BUILD.bazel  eager.cpp  partition.cpp  partition_by.cpp  sink.cpp  take.cpp  take_nth.cpp  take_while.cpp
zug/: sequence.hpp
